--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,6 @@
+@import "highlightjs/styles/github.css";
+@import "highlightjs/styles/github.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -7,18 +10,18 @@
     --sidenav-height: calc(100vh - var(--header-height));
 }
 
-/*body, html {*/
-/*    height: 100%;*/
-/*    margin: 0;*/
-/*}*/
+body, html {
+    height: 100%;
+    margin: 0;
+}
 
-/*body {*/
-/*    display: flex;*/
-/*    flex-direction: column;*/
-/*}*/
+body {
+    display: flex;
+    flex-direction: column;
+}
 
-/*#__next {*/
-/*    display: flex;*/
-/*    flex-direction: column;*/
-/*    min-height: 100%;*/
-/*}*/
+#__next {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
