--- a/components/layouts/sidenavLayout.module.css
+++ b/components/layouts/sidenavLayout.module.css
@@ -1,6 +1,10 @@
 
 .layoutContainer {
-    height: calc(100vh - var(--header-height));
-    display: flex;
-    flex-grow: 1;
+    @apply flex flex-col flex-grow md:flex-row;
+}
+
+@media screen(md) {
+    .layoutContainer {
+        height: calc(100vh - var(--header-height));
+    }
 }
