--- a/components/form/Select/Select.module.css
+++ b/components/form/Select/Select.module.css
@@ -1,6 +1,6 @@
 .select {
     background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3E%3Cpath stroke='%236B7280' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='m6 8 4 4 4-4'/%3E%3C/svg%3E");
-    background-position: right .5rem center;
+    background-position: right 0.5rem center;
     background-repeat: no-repeat;
     -webkit-background-size: 1.5rem 1.5rem;
     background-size: 1.5rem 1.5rem;
